massive refactoring to the entire codebase making the code more readable and fixing code warnings